# grasping_code

grasping/: CMakeLists.txt  package.xml
grasping/launch/: grasping.launch.py
grasping/src/: grasping_node.cpp
grasping_interface/: CMakeLists.txt  package.xml
grasping_interface/srv/: TwoPoints.srv
moveit_task_constructor/core/src/: task.cpp
moveit_task_constructor/demo/launch/: demo.launch.py
